# portfolio

./: CNAME  LICENSE  README.md  colin_vaughn_resume.html  index.html  ship-animation.js  style.css
FaceDetection/: README.md  face.js  index.html  style.css
GridEye/: index.html
OCR/: README.md  app.js  index.html  preprocessor.worker.js  samples.js  style.css
Omni/: README.md  index.html
VPN/: .gitignore  Dockerfile  README.md  docker-compose.yml  index.html
VPN/client-app/: index.html  package.json  tsconfig.json  vite.config.ts
VPN/client-app/scripts/: fix_theme.cjs  fix_theme.js
VPN/client-app/src/: App.tsx  main.tsx
VPN/client-app/src-tauri/: Cargo.toml  build.rs  generate_assets.cjs  generate_assets.js  generate_assets.py  tauri.conf.json
VPN/client-app/src-tauri/.cargo/: config.toml
VPN/client-app/src-tauri/capabilities/: default.json
VPN/client-app/src-tauri/icons/: icon.icns
VPN/client-app/src-tauri/mobile/android/: AndroidManifest.additions.xml
VPN/client-app/src-tauri/mobile/android/src/main/java/org/tunnely/client/: IapPlugin.kt  TunnelyVpnService.kt  VpnPlugin.kt
VPN/client-app/src-tauri/mobile/ios/Sources/: IapPlugin.swift  VpnPlugin.swift
VPN/client-app/src-tauri/src/: adblock_mobile.rs  cli.rs  commands.rs  errors.rs  iap_plugin.rs  keychain.rs  latency.rs  lib.rs  main.rs  preferences.rs  state.rs  tray.rs  updater.rs  vpn_plugin.rs
VPN/client-app/src-tauri/src/adblock/: cert.rs  crash_guard.rs  embedded_filters.txt  engine.rs  lists.rs  mod.rs  proxy.rs  quic.rs  stats.rs  sysproxy.rs  webrtc.rs
VPN/client-app/src-tauri/src/dns_filter/: mod.rs  packet.rs  parser.rs
VPN/client-app/src-tauri/src/supabase/: auth.rs  mod.rs  servers.rs
VPN/client-app/src-tauri/src/tunnel/: boringtun_tunnel.rs  mod.rs  platform.rs  platform_mobile.rs
VPN/client-app/src-tauri/src/tunnel/bonding/: channel.rs  channel_manager.rs  config.rs  link_monitor.rs  mod.rs  reorder_buffer.rs  scheduler.rs
VPN/client-app/src/components/: BondingStats.tsx  ConnectButton.tsx  LatencyChart.tsx  LoginForm.tsx  MobilePaywall.tsx  NetworkStats.tsx  NetworkStatus.tsx  ServerPicker.tsx  Sidebar.tsx  StatusBar.tsx  TabBar.tsx  Titlebar.tsx
VPN/client-app/src/components/Map/: WorldMap.tsx  mapData.ts
VPN/client-app/src/layouts/: MainLayout.tsx
VPN/client-app/src/lib/: stores.ts  tauri.ts  types.ts  useNetworkMonitor.ts  usePageVisibility.ts
VPN/client-app/src/pages/: Home.tsx  HomePage.tsx  ServersPage.tsx  SettingsPage.tsx
VPN/client-app/src/styles/: global.css
VPN/relay-server/: Cargo.toml
VPN/relay-server/relay-common/: Cargo.toml
VPN/relay-server/relay-common/src/: bonding.rs  error.rs  lib.rs  types.rs
VPN/relay-server/relay-core/: Cargo.toml
VPN/relay-server/relay-core/src/: config.rs  main.rs
VPN/relay-server/relay-core/src/api/: client_config.rs  mod.rs  server.rs
VPN/relay-server/relay-core/src/bonding/: mod.rs  reorder_buffer.rs  reverse_scheduler.rs  session.rs
VPN/relay-server/relay-core/src/dns/: blocklist.rs  cache.rs  cname.rs  mod.rs  proxy.rs  stats.rs
VPN/relay-server/relay-core/src/health/: heartbeat.rs  metrics.rs  mod.rs
VPN/relay-server/relay-core/src/mesh/: discovery.rs  mod.rs  prober.rs  tunnel.rs
VPN/relay-server/relay-core/src/routing/: forwarding.rs  mod.rs  netfilter.rs
VPN/relay-server/relay-core/src/supabase/: auth.rs  client.rs
VPN/relay-server/relay-core/src/wg/: interface.rs  keys.rs  mod.rs  peer.rs
VPN/relay-server/relay-quic/: Cargo.toml
VPN/relay-server/relay-quic/src/: lib.rs  tls.rs  tunnel.rs
VPN/website/: middleware.ts  next.config.ts  package.json
VPN/website/public/: robots.txt
VPN/website/src/app/: globals.css  layout.tsx  not-found.tsx  page.tsx  sitemap.ts
VPN/website/src/app/(auth)/: layout.tsx
VPN/website/src/app/(marketing)/: layout.tsx
VPN/website/src/app/blog/: page.tsx
VPN/website/src/app/dashboard/: layout.tsx  page.tsx
VPN/website/src/app/docs/: layout.tsx  page.tsx
VPN/website/src/components/admin/: BlogEditor.tsx
VPN/website/src/components/auth/: AuthForm.tsx
VPN/website/src/components/blog/: BlogCard.tsx  BlogContent.tsx  CategoryFilter.tsx
VPN/website/src/components/dashboard/: KeyManager.tsx
VPN/website/src/components/docs/: DocsSidebar.tsx  MobileDocNav.tsx
VPN/website/src/components/layout/: DashboardSidebar.tsx  Footer.tsx  Navbar.tsx
VPN/website/src/components/marketing/: ArchitectureSection.tsx  BrokenGlobe.tsx  CTASection.tsx  DownloadCards.tsx  FeatureGrid.tsx  Hero.tsx  HowItWorks.tsx  InteractiveGlobe.tsx  NetworkGlobe.tsx  PastVersions.tsx  PricingCards.tsx  StatsCounter.tsx  ValueProp.tsx
VPN/website/src/components/ui/: Badge.tsx  Button.tsx  Card.tsx  Logo.tsx  PrefetchLink.tsx
VPN/website/src/lib/stripe/: webhook-handlers.ts
VPN/website/src/lib/supabase/: middleware.ts  server.ts
(+42 files in other folders)
