[package]
name = "relay-quic"
version.workspace = true
edition.workspace = true

[dependencies]
relay-common = { path = "../relay-common" }
tokio = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
quinn = { version = "0.11", features = ["rustls-ring", "runtime-tokio"] }
rustls = { version = "0.23", features = ["std", "ring"] }
rustls-pemfile = "2"
rcgen = "0.13"
pem = "3"
bytes = "1"
